--- a/index.css
+++ b/index.css
@@ -1,8 +1,16 @@
 * {
   margin: 0;
   padding: 0;
+
   text-decoration: none;
   list-style: none;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
 }
 
 .heading {
@@ -65,6 +73,7 @@
 .header ul a {
   display: block;
   padding: 20px;
+
   border-right: 1px solid #aaa;
   cursor: pointer;
   transition: 0.1s ease-out;
@@ -79,6 +88,71 @@
 .header ul :active {
   background-color: #f4fcbe;
   color: red;
+}
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height 0.3s ease-out;
+}
+
+.header .menu-icon {
+  padding: 20px 20px;
+  position: relative;
+  float: right;
+  cursor: pointer;
+  margin: 10px 20px;
+}
+
+.header .menu-icon .nav-icon {
+  background: #666;
+  display: block;
+  height: 3px;
+  width: 20px;
+  position: relative;
+}
+
+.header .menu-icon .nav-icon:before {
+  background: #333;
+  content: "";
+  display: block;
+  height: 3px;
+  width: 20px;
+  position: absolute;
+  top: 5px;
+  transition: 0.2s ease-out;
+}
+
+.header .menu-icon .nav-icon:after {
+  background: #333;
+  content: "";
+  display: block;
+  height: 3px;
+  width: 20px;
+  position: absolute;
+  top: -5px;
+  transition: 0.2s ease-out;
+}
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 400px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .nav-icon {
+  background-color: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .nav-icon:before {
+  transform: rotate(-45deg);
+  top: 0;
+}
+
+.header .menu-btn:checked ~ .menu-icon .nav-icon:after {
+  transform: rotate(45deg);
+  top: 0;
 }
 
 .container {
@@ -557,130 +631,39 @@
     transform: scale(1.1);
   }
 }
-
-@media (max-width: 920px) {
-  .header {
-    background-color: #fff;
-    box-shadow: 1px 1px 4px 0 rgba(0, 0, 0.1);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 3;
+@media (min-width: 768px) {
+  .header li {
+    max-width: 100%;
+    line-height: 40px;
+    float: left;
   }
-  .header ul {
-    margin: 0;
-    padding: 0;
-    overflow: clip;
-    background-color: #fff;
+  .header li a {
+    padding: 10px 15px;
   }
-
-  .header ul a {
-    display: block;
-    padding: 4px;
-    border-right: 1px solid #aaa;
-    cursor: pointer;
-    transition: 0.1s ease-out;
-    color: #3640fc;
-    font-size: 18px;
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+    margin-right: 20px;
   }
-  .phone {
+  .header .menu-icon {
+    display: none;
+  }
+  .headup {
+    text-align: center;
+    font-size: 14px;
+  }
+  .header .logo {
+    margin-left: 20px;
+  }
+  .call {
     display: block;
     float: right;
-    margin: auto;
-    font-weight: bold;
-    color: #3640fc;
-    font-size: 9px;
+    margin-right: 20px;
   }
-
-  .header ul a:hover {
-    background-color: #f4fcbe;
-    color: red;
-  }
-
-  .header ul :active {
-    background-color: #f4fcbe;
-    color: red;
-  }
-
-  .logo {
-    float: left;
-    margin: 8px 8px;
-    width: 100px;
-    height: 40px;
-    background-image: url(img/ecfileR.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
-}
-
-.header .menu {
-  clear: both;
-  max-height: 0;
-  transition: max-height 0.3s ease-out;
-}
-
-.header .menu-icon {
-  padding: 20px 20px;
-  position: relative;
-  float: right;
-  cursor: pointer;
-  margin: 10px 20px;
-}
-
-.header .menu-icon .nav-icon {
-  background: #666;
-  display: block;
-  height: 3px;
-  width: 20px;
-  position: relative;
-}
-
-.header .menu-icon .nav-icon:before {
-  background: #333;
-  content: "";
-  display: block;
-  height: 3px;
-  width: 20px;
-  position: absolute;
-  top: 5px;
-  transition: 0.2s ease-out;
-}
-
-.header .menu-icon .nav-icon:after {
-  background: #333;
-  content: "";
-  display: block;
-  height: 3px;
-  width: 20px;
-  position: absolute;
-  top: -5px;
-  transition: 0.2s ease-out;
-}
-
-.header .menu-btn {
-  display: none;
-}
-
-.header .menu-btn:checked ~ .menu {
-  max-height: 400px;
-}
-
-.header .menu-btn:checked ~ .menu-icon .nav-icon {
-  background-color: transparent;
-}
-
-.header .menu-btn:checked ~ .menu-icon .nav-icon:before {
-  transform: rotate(-45deg);
-  top: 0;
-}
-
-.header .menu-btn:checked ~ .menu-icon .nav-icon:after {
-  transform: rotate(45deg);
-  top: 0;
 }
 
 .footersec {
-  margin: 0 auto;
   margin-top: 60px;
   display: flex;
   width: 100%;
@@ -690,7 +673,6 @@
 }
 
 .footersec1 {
-  margin: 0 auto;
   display: flex;
   width: 100%;
   background: #22076d;
@@ -705,9 +687,7 @@
 
 @media (min-width: 920px) {
   .footersec {
-    margin: 0 auto;
-    margin-top: 200px;
-    width: 100%;
+    margin-top: 140px;
   }
   .company-details {
     margin-left: 100px;
